2015-04-30 Added drag&drop feature to Connection module
2015-04-30 Added Reset command to Puzzle module
2015-04-29 Added saving color and thickness after closing the tool in IWB Toolbar module
2015-04-29 Added 'correct' and 'wrong' classes in Check mode in Connection module
2015-04-29 Added LearnPen Data module
2015-04-27 Added reset command to Ordering module
2015-04-23 Fixed issue with button handlers in IWB Toolbar module
2015-04-23 Added property "Placeholder text" in Paragraph module
2015-04-23 Fixed issue with Show Answers in Not Activity mode in Text Selection module
2015-04-21 Fixed issue with math Gaps in Text module
2015-04-21 Fixed issue with ShowAnswers in Text module
2015-04-21 Fixed issue with parsing of mathgaps having editable syntax in Text module
2015-04-20 Fixed issue with moving slider on zoomed page in Slider module
2015-04-17 Fixed issue with gap causing crashing of Editor in Text module
2015-04-17 Added Italian language to eKeyboard module
2015-04-17 Fixed issue with rounding seconds in TextAudio module
2015-04-17 Fixed issue with showing boundaries in editor and scoring in Chrome in Shape Tracing module
2015-04-16 Fixed issue with isOptionSelected method for Random Mode in Choice module
2015-04-15 Fixed issue with parsing text in Text Selection module
2015-04-15 Deleted changes in css classes in Line Number module
2015-04-15 Added drag&drop feature to Ordering module
2015-04-15 Added property Hide default controls to Video module
2015-04-15 Added Is Not Activity property to Text Selection module
2015-04-14 Fixed issue with positioning axis elements and fixed issue with axis x values property in Line Number module
2015-04-14 Fixed issue with PopupPanelGlass in PopupPage
2015-04-13 Added sending event after pair matching in Memo Game module
2015-04-13 Fixed issue with rounding times in Text Audio module
2015-04-09 Fixed issue with random noises in LearnPen_Report module
2015-04-09 Fixed issue with state restoring in Shape Tracing module